--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "version": 2,
   "builds": [{ "src": "index.js", "use": "/vercel@node" }],
-  "rewrites": [{ "source": "/(.*)", "distination": "index.js" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "index.js" }]
 }
